tests/ui/mismatched_types/expectation-from-return-type.stderr
error[E0308]: mismatched types
  --> $DIR/expectation-from-return-type.rs:5:15
   |
LL | fn main() {
   |          - this implicit `()` return type influences the call expression's return type
LL |     let a = 0;
LL |     ptr::read(&a)
   |     --------- ^^ expected `*const ()`, found `&{integer}`
   |     |
   |     arguments to this function are incorrect
   |
   = note: expected raw pointer `*const ()`
                found reference `&{integer}`
note: function defined here
  --> $SRC_DIR/core/src/ptr/mod.rs:LL:COL

error[E0308]: mismatched types
  --> $DIR/expectation-from-return-type.rs:15:22
   |
LL | fn foo() {
   |         - this implicit `()` return type influences the call expression's return type
LL |     let a = 0;
LL |     return ptr::read(&a);
   |            --------- ^^ expected `*const ()`, found `&{integer}`
   |            |
   |            arguments to this function are incorrect
   |
   = note: expected raw pointer `*const ()`
                found reference `&{integer}`
note: function defined here
  --> $SRC_DIR/core/src/ptr/mod.rs:LL:COL

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0308`.
